--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="./files/stylesheet.css">
-    <link rel="icon" type="image/png" href="http://39.108.48.32/XuWebsite/images/icon.png">
 
 
 <style data-id="immersive-translate-input-injected-css">.immersive-translate-input {
@@ -527,15 +526,15 @@
                       <LI>
                       <LI id="award-nav"><SPAN>Awards</SPAN>
                       <LI> -->
-                    <li class="nav-item"><a href="http://39.108.48.32/XuWebsite/#students">指导学生</a></li>
-                    <li class="nav-item"><a href="http://39.108.48.32/XuWebsite/#services">学术服务</a></li>
+                    <li class="nav-item"><a href="https://learn-in-practice.github.io/#students">指导学生</a></li>
+                    <li class="nav-item"><a href="https://learn-in-practice.github.io/#services">学术服务</a></li>
                     <!-- <li class="nav-item"><a href="#talks">Talks</a></li> -->
 
-                    <li class="nav-item"><a href="http://39.108.48.32/XuWebsite/#publications">代表性论文</a></li>
-                    <li class="nav-item"><a href="http://39.108.48.32/XuWebsite/#awards">奖励与荣誉</a></li>
-                    <li class="nav-item"><a href="http://39.108.48.32/XuWebsite/#projects">项目</a></li>
+                    <li class="nav-item"><a href="https://learn-in-practice.github.io/#publications">代表性论文</a></li>
+                    <li class="nav-item"><a href="https://learn-in-practice.github.io/#awards">奖励与荣誉</a></li>
+                    <li class="nav-item"><a href="https://learn-in-practice.github.io/#projects">项目</a></li>
             
-                    <li class="nav-item"><a href="http://39.108.48.32/XuWebsite/#top">主页</a></li>
+                    <li class="nav-item"><a href="https://learn-in-practice.github.io/#top">主页</a></li>
         </ul></div><table style="width:100%;max-width:1200px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
             
