--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@
                                     <em>International Joint Conference on Artificial Intelligence (IJCAI)</em>, 2017
                                     <br>
                                     <a href="https://www.ijcai.org/proceedings/2017/0442.pdf">[Paper]</a>
-                                    <a href="./ijcai17_mcsvm.txt">[bibtex]</a>
+                                    <a href="./data/ijcai17_mcsvm.txt">[bibtex]</a>
                                 </td>
                             </tr>
 
