--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
                                     10.1109/TIP.2022.3166278
                                     <br>
                                     <a href="https://ieeexplore.ieee.org/document/9758637">[Paper]</a>
-                                    <a>[bibtex]</a>
+                                    <a href="./data/xu2022unintentional.txt">[bibtex]</a>
                                 </td>
                             </tr>
 
