--- a/index.html
+++ b/index.html
@@ -665,11 +665,11 @@
                                         <li style="margin: 5px;">
                                             国家自然科学基金青年基金，2021，项目负责人
                                         </li>
-                                        <li style="margin: 5px;">
+<!--                                         <li style="margin: 5px;">
                                             中国博士后科学基金面上项目，2020，项目负责人
                                         </li>
                                         <li style="margin: 5px;">
-                                            西北工业大学博士论文创新基金，2018，项目负责人
+                                            西北工业大学博士论文创新基金，2018，项目负责人 -->
                                         <!--</li>
                                                                                                                         <li style="margin: 5px;">
                                             国家自然科学基金面上项目，2019，参与 </li>
@@ -704,7 +704,7 @@
                                         <li style="margin: 5px;">
                                             中国图象图形学学会自然科学奖二等奖，2024，排第三
                                         </li>
-                                        <li style="margin: 5px;">
+<!--                                         <li style="margin: 5px;">
                                             北京图象图形学学会“最美女科技工作者”，2023
                                         </li>
                                         <li style="margin: 5px;">
@@ -718,7 +718,7 @@
                                         </li>
                                         <li style="margin: 5px;">
                                             西北工业大学优秀研究生，2016、2017、2018
-                                        </li>
+                                        </li> -->
                                     <p></p>
                                 </td>
                             </tr>
