--- a/index.html
+++ b/index.html
@@ -608,36 +608,28 @@
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <heading style="text-align:center; font-weight:bold; font-size:20px;">News</heading>
                                     <p>
-                                        </p><li style="margin: 5px;">
+                                        </p>
+
+							           <li style="margin: 5px;">
+                                            2025-7-10：1篇论文被IEEE TCSVT 2025接收
+                                        </li>
+									<li style="margin: 5px;">
+                                            2025-3-28：1篇论文被IEEE TPAMI 2025接收
+                                        </li>
+
+									<li style="margin: 5px;">
+                                            2025-3-01：1篇论文被IEEE TCSVT 2025接收
+                                        </li>
+									<li style="margin: 5px;">
+                                            2025-2-27：1篇论文被CVPR 2025接收
+                                        </li>
+			
+									    <li style="margin: 5px;">
                                             2025-01-25：1篇论文被TPAMI 2025接收
                                         </li>
                                         <li style="margin: 5px;">
                                             2025-01-23：2篇论文被ICLR 2025接收
                                         </li>
-                                        <li style="margin: 5px;">
-                                            2024-10-31：1篇论文被IEEE TIP 2024接收
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            2024-09-03：1篇论文被IEEE TIP 2024接收
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            2024-07-16：1篇论文被ACM MM 2024接收
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            2024-06-03：1篇论文被IJCV 2024接收
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            2024-05-09：1篇论文被IEEE TNNLS 2024接收
-                                        </li>
-                                        <!--<li style="margin: 5px;">
-                                            2024-04-17：1篇论文被IJCAI 2024接收
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            2024-03-13：1篇论文被ICME 2024接收
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            2024-02-27：3篇论文被CVPR 2024接收
-                                        </li>-->
                                     <p></p>
                                 </td>
                             </tr>
