--- a/index.html
+++ b/index.html
@@ -642,7 +642,13 @@
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <heading style="text-align:center; font-weight:bold; font-size:20px;">项目</heading>
                                     <p>
-                                        </p><li style="margin: 5px;">
+                                        </p>
+                                        
+                                        <li style="margin: 5px;">
+                                           国家自然科学基金青年科学基金B类（原优青），2025，项目负责人
+                                        </li>
+                                        
+                                        <li style="margin: 5px;">
                                             北京市自然科学基金面上项目，2025，项目负责人
                                         </li>
                                         <li style="margin: 5px;">
