--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="./files/stylesheet.css">
+    <link rel="icon" type="image/png" href="./files/USTB_logo.png">
+
+
 
 
 <style data-id="immersive-translate-input-injected-css">.immersive-translate-input {
