--- a/index.html
+++ b/index.html
@@ -574,37 +574,6 @@
                     </table>
 
 
-                    <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-          <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>News</heading>
-            <p>
-	      <li style="margin: 5px;">
-                <b>2021-10:</b> Our team won the 3rd place in <a href="https://vipriors.github.io/challenges/">2021 VIPriors Instance Segmentation Challenge</a> (ICCV 2021).
-              </li>		    
-	      <li style="margin: 5px;">
-                <b>2021-07:</b> One paper on video inpainting detection is accepted by <a href="http://iccv2021.thecvf.com/home">ICCV 2021</a>.
-              </li>
-               <li style="margin: 5px;">
-                <b>2021-04:</b> One paper on  kinship verification is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
-              </li>
-	      <li style="margin: 5px;">
-                <b>2021-03:</b> Three papers on uncertainty learning, kinship verification, and face clustering are accepted to <a href="http://cvpr2021.thecvf.com/">CVPR 2021</a>.
-              </li>
-              <li style="margin: 5px;" >
-                <b>2020-07:</b> One paper on social relation recognition is accepted to <a href="https://eccv2020.eu/">ECCV 2020</a>.
-              </li>
-              <li style="margin: 5px;" >
-                <b>2020-03:</b> One paper on kinship verification is accepted as oral presentation at <a href="https://www.2020.ieeeicme.org/"> ICME 2020</a>.
-              </li>
-              <li style="margin: 5px;">
-                <b>2019-02:</b> One paper on age estimation is accepted to <a href="http://cvpr2019.thecvf.com/">CVPR 2019</a>.
-              </li>
-            </p>
-          </td>
-        </tr>
-      </tbody></table> -->
-
                     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;" id="projects">
                         <tbody>
                             <tr>
@@ -738,6 +707,26 @@
                     </table>
                     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                         <tbody>
+
+                          
+                        <tr>
+                          <td style="padding:20px;width:30%;max-width:30%" align="center">
+                              <img style="width:100%;max-width:100%" src='images/HC-FGAQA.png' alt="dise">
+                          </td>
+                          <td width="75%" valign="center">
+                              <papertitle>Human-centric Fine-grained Action Quality Assessment</papertitle>
+                              <br>
+                              <strong>Jinglin Xu</strong>, Sibo Yin, Yuxin Peng*
+                              <br>
+                              <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>)</em>, 2025
+                              <br>
+                              <a href="https://ieeexplore.ieee.org/document/10946879">[Paper]</a>
+                              <br>
+                          </td>
+                      </tr>
+
+
+
                             <tr>
                                 <td style="padding:20px;width:30%;max-width:30%" align="center">
                                     <img style="width:100%;max-width:100%" src="./files/TransferableUAL.png" alt="dise">
@@ -749,15 +738,33 @@
                                     <br>
                                     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2025</em>
                                     <br>
-                                    <!-- <a href="https://finediving.ivg-research.xyz/">[项目主页]</a> -->
                                     <a href="https://ieeexplore.ieee.org/document/10872809">[Paper]</a>
-                                    <a href="https://github.com/xujinglin/TransferableUAL">[Github]</a>
-                                    <!-- <a href="https://arxiv.org/abs/2405.05216">[arxiv]</a> -->
-                                    <!-- <a href="https://">[bibtex]</a> -->
-                                   
+                                    <a href="https://github.com/xujinglin/TransferableUAL">[Github]</a>                                   
                                     <br>
                                 </td>
                             </tr>
+
+
+
+                            <tr>
+                            <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                <img style="width:100%;max-width:100%" src='images/DyFo.png' alt="dise">
+                            </td>
+                            <td width="75%" valign="center">
+                                <papertitle>DyFo: A Training-Free Dynamic Focus Visual Search for Enhancing LMMs in Fine-Grained Visual Understanding</papertitle>
+                                <br>
+                                Geng Li, <strong>Jinglin Xu</strong>, Yunzhen Zhao, Yuxin Peng*
+                                <br>
+                                <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2025
+                                <br>
+                                <a href="https://github.com/PKU-ICST-MIPL/DyFo_CVPR2025">[Github]</a>
+                                <a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Li_DyFo_A_Training-Free_Dynamic_Focus_Visual_Search_for_Enhancing_LMMs_CVPR_2025_paper.pdf">[Paper]</a>
+                                <br>
+                            </td>
+                        </tr>
+
+
+
                             <tr>
                                 <td style="padding:20px;width:30%;max-width:30%" align="center">
                                     <img style="width:100%;max-width:100%" src="./files/MLLMs.jpg" alt="dise">
@@ -798,6 +805,43 @@
                                     <br>
                                 </td>
                             </tr>
+
+
+                            <tr>
+                            <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                <img style="width:100%;max-width:100%" src='images/BFSTAL-pipeline.png' alt="dise">
+                            </td>
+                            <td width="75%" valign="center">
+                                <papertitle>BFSTAL: Bidirectional Feature Splitting with Cross-Layer Fusion for Temporal Action Localization</papertitle>
+                                <br>
+                                <strong>Jinglin Xu</strong>, Yaqi Zhang, Wenhao Zhou, Hongmin Liu*
+                                <br>
+                                <em>IEEE Transactions on Circuits and Systems for Video Technology (<strong>TCSVT</strong>)</em>, 2025
+                                <br>
+                                <a href="https://ieeexplore.ieee.org/abstract/document/11079712">[Paper]</a>
+                                <br>
+                            </td>
+                        </tr>
+
+                        <tr>
+                                      <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                          <img style="width:100%;max-width:100%" src='images/TCSVT-BRTAL.png' alt="dise">
+                                      </td>
+                                      <td width="75%" valign="center">
+                                          <papertitle>BRTAL: Boundary Refinement Temporal Action Localization via Offset-Driven Diffusion Models</papertitle>
+                                          <br>
+                                          Hongmin Liu, Xueli Li, Bin Fan, <strong>Jinglin Xu*</strong>
+                                          <br>
+                                          <em>IEEE Transactions on Circuits and Systems for Video Technology (<strong>TCSVT</strong>)</em>, 2025
+                                          <br>
+                                          <a href="https://ieeexplore.ieee.org/document/10912675">[Paper]</a>
+                                          <a href="data/BRTAL.txt">[bibtex]</a>
+                                          <br>
+                                      </td>
+                                  </tr>
+
+
+
                             <tr>
                                 <td style="padding:20px;width:30%;max-width:30%" align="center">
                                     <img style="width:100%;max-width:100%" src="./files/TIP-Pro2Diff.png" alt="dise">
