--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                           
                         <tr>
                           <td style="padding:20px;width:30%;max-width:30%" align="center">
-                              <img style="width:100%;max-width:100%" src='images/HC-FGAQA.png' alt="dise">
+                              <img style="width:100%;max-width:100%" src='./files/HC-FGAQA.png' alt="dise">
                           </td>
                           <td width="75%" valign="center">
                               <papertitle>Human-centric Fine-grained Action Quality Assessment</papertitle>
@@ -748,7 +748,7 @@
 
                             <tr>
                             <td style="padding:20px;width:30%;max-width:30%" align="center">
-                                <img style="width:100%;max-width:100%" src='images/DyFo.png' alt="dise">
+                                <img style="width:100%;max-width:100%" src='./files/DyFo.png' alt="dise">
                             </td>
                             <td width="75%" valign="center">
                                 <papertitle>DyFo: A Training-Free Dynamic Focus Visual Search for Enhancing LMMs in Fine-Grained Visual Understanding</papertitle>
@@ -809,7 +809,7 @@
 
                             <tr>
                             <td style="padding:20px;width:30%;max-width:30%" align="center">
-                                <img style="width:100%;max-width:100%" src='images/BFSTAL-pipeline.png' alt="dise">
+                                <img style="width:100%;max-width:100%" src='./files/BFSTAL-pipeline.png' alt="dise">
                             </td>
                             <td width="75%" valign="center">
                                 <papertitle>BFSTAL: Bidirectional Feature Splitting with Cross-Layer Fusion for Temporal Action Localization</papertitle>
@@ -825,7 +825,7 @@
 
                         <tr>
                                       <td style="padding:20px;width:30%;max-width:30%" align="center">
-                                          <img style="width:100%;max-width:100%" src='images/TCSVT-BRTAL.png' alt="dise">
+                                          <img style="width:100%;max-width:100%" src='./files/TCSVT-BRTAL.png' alt="dise">
                                       </td>
                                       <td width="75%" valign="center">
                                           <papertitle>BRTAL: Boundary Refinement Temporal Action Localization via Offset-Driven Diffusion Models</papertitle>
