--- a/index.html
+++ b/index.html
@@ -1357,11 +1357,8 @@
                                         <td style="padding:20px;width:100%;vertical-align:middle" id="students">
                                             <heading style="text-align:center; font-weight:bold; font-size:20px;">指导学生</heading>
                                             <p>
-                                                </p><li style="margin: 5px;">
-                                                    <b>博士生:</b>
-                                                    <br>
-                                                    <span style="padding: 23px;">李雪梨 (2022.09-; 刘红敏教授学生), 刘宏坤 (2021.09-; 刘红敏教授学生)</span>
-                                                </li>
+                                                </p>
+					
                                                 <li style="margin: 5px">
                                                     <b>硕士生:</b>
                                                     <br>
@@ -1370,9 +1367,17 @@
                                                     <br>
                                                     <span style="padding: 23px;">马晨阳 (2024.09-), 雷宇隆 (2024.09-)
                                                     </span>
+													<br>
+                                                    <span style="padding: 23px;">母星宏 (2025.09-), 李京选 (2025.09-), 王加博 (2025.09-)
+                                                    </span>
                                                     <br>
-                                                    <span style="padding: 23px;">蔡越峰 (2021.09-2024.07; 刘红敏教授学生), 张灿彬 (2022.09-; 刘红敏教授学生)</span>
+                                                    <span style="padding: 23px;">蔡越峰 (2021.09-2024.07; 刘红敏教授学生), 张灿彬 (2022.09-2025.07; 刘红敏教授学生)</span>
                                                     <br>
+                                                </li>
+											<li style="margin: 5px;">
+                                                    <b>博士生:</b>
+                                                    <br>
+                                                    <span style="padding: 23px;">李雪梨 (2022.09-2024.07; 刘红敏教授学生), 刘宏坤 (2023.05-2024.07; 刘红敏教授学生)</span>
                                                 </li>
                                                 <!--<li style="margin: 5px;">
                                                     <b>本科生:</b>
