--- a/index.html
+++ b/index.html
@@ -744,7 +744,22 @@
                                 </td>
                             </tr>
 
-
+							<tr>
+										  <td style="padding:20px;width:30%;max-width:30%" align="center">
+											  <img style="width:100%;max-width:100%" src='images/TSPO.png' alt="dise">
+										  </td>
+										  <td width="75%" valign="center">
+											  <papertitle>TSPO: Temporal Sampling Policy Optimization for Long-form Video Language Understanding</papertitle>
+											  <br>
+											  Canhui Tang, Zifan Han, Hongbo Sun, Sanping Zhou, Xuchong Zhang, Xin Wei, Ye Yuan, <strong>Jinglin Xu</strong>, Hao Sun
+											  <br>
+											  <em>arXiv preprint arXiv:2508.04369
+											  <br>
+											  <a href="https://github.com/Hui-design/TSPO">[Github]</a>
+											  <a href="https://arxiv.org/pdf/2508.04369?">[Paper]</a>
+											  <br>
+										  </td>
+									  </tr>
 
                             <tr>
                             <td style="padding:20px;width:30%;max-width:30%" align="center">
