--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
 
 							<tr>
 										  <td style="padding:20px;width:30%;max-width:30%" align="center">
-											  <img style="width:100%;max-width:100%" src='images/TSPO.png' alt="dise">
+											  <img style="width:100%;max-width:100%" src='./files/TSPO.png' alt="dise">
 										  </td>
 										  <td width="75%" valign="center">
 											  <papertitle>TSPO: Temporal Sampling Policy Optimization for Long-form Video Language Understanding</papertitle>
