--- a/index.html
+++ b/index.html
@@ -753,10 +753,10 @@
 											  <br>
 											  Canhui Tang, Zifan Han, Hongbo Sun, Sanping Zhou, Xuchong Zhang, Xin Wei, Ye Yuan, <strong>Jinglin Xu</strong>, Hao Sun
 											  <br>
-											  <em>arXiv preprint arXiv:2508.04369
+											  <em>arXiv preprint arXiv:2508.04369</em>
 											  <br>
-											  <a href="https://github.com/Hui-design/TSPO">[Github]</a>
 											  <a href="https://arxiv.org/pdf/2508.04369?">[Paper]</a>
+                        <a href="https://github.com/Hui-design/TSPO">[Github]</a>
 											  <br>
 										  </td>
 									  </tr>
@@ -772,8 +772,8 @@
                                 <br>
                                 <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2025
                                 <br>
-                                <a href="https://github.com/PKU-ICST-MIPL/DyFo_CVPR2025">[Github]</a>
                                 <a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Li_DyFo_A_Training-Free_Dynamic_Focus_Visual_Search_for_Enhancing_LMMs_CVPR_2025_paper.pdf">[Paper]</a>
+                                <a href="https://github.com/PKU-ICST-MIPL/DyFo_CVPR2025">[Github]</a>
                                 <br>
                             </td>
                         </tr>
@@ -999,13 +999,11 @@
                                     <strong>Jinglin Xu</strong>, Yijie Guo, Yuxin Peng*
                                     <!-- <strong>Jinglin Xu</strong>, Yijie. -->
                                     <br>
-                                    <em>37th IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 (Accept)
+                                    <em>37th IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
                                     <br>
                                     <!--<a href="https://finediving.ivg-research.xyz/">[项目主页]</a>-->
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Xu_FinePOSE_Fine-Grained_Prompt-Driven_3D_Human_Pose_Estimation_via_Diffusion_Models_CVPR_2024_paper.pdf">[Paper]</a>
                                     <a href="https://github.com/PKU-ICST-MIPL/FinePOSE_CVPR2024">[Github]</a>
-                                    <a href="https://arxiv.org/abs/2405.05216">[arxiv]</a>
-                                    <a href="https:">[bibtex]</a>
-                                    <a href="https:">[中文解读]</a>
                                     <br>
                                 </td>
                             </tr>
@@ -1021,13 +1019,11 @@
                                     <strong>Jinglin Xu</strong>, Guohao Zhao, Sibo Yin, Wenhao Zhou, Yuxin Peng*
                                     <!-- <strong>Jinglin Xu</strong>, et al. -->
                                     <br>
-                                    <em>37th IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 (Accept)
+                                    <em>37th IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
                                     <br>
                                     <!-- <a href="">[项目主页]</a> -->
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Xu_FineSports_A_Multi-person_Hierarchical_Sports_Video_Dataset_for_Fine-grained_Action_CVPR_2024_paper.pdf">[Paper]</a>
                                     <a href="https://github.com/PKU-ICST-MIPL/FineSports_CVPR2024">[Github]</a>
-                                    <a href="https://learn-in-practice.github.io">[arxiv]</a>
-                                    <a href="https://learn-in-practice.github.io">[bibtex]</a>
-                                    <a href="https://learn-in-practice.github.io">[中文解读]</a>
                                     <br>
                                 </td>
                             </tr>
@@ -1043,13 +1039,11 @@
                                     <strong>Jinglin Xu</strong>, Sibo Yin, Guohao Zhao, Zishuo Wang, Yuxin Peng*
                                     <!-- <strong>Jinglin Xu</strong>, et al. -->
                                     <br>
-                                    <em>37th IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 (Accept)
+                                    <em>37th IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024
                                     <br>
                                     <!-- <a href="">[项目主页]</a> -->
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Xu_FineParser_A_Fine-grained_Spatio-temporal_Action_Parser_for_Human-centric_Action_Quality_CVPR_2024_paper.pdf">[Paper]</a>
                                     <a href="https://github.com/PKU-ICST-MIPL/FineParser_CVPR2024">[Github]</a>
-                                    <a href="https://learn-in-practice.github.io">[arxiv]</a>
-                                    <a href="https://learn-in-practice.github.io">[bibtex]</a>
-                                    <a href="https://learn-in-practice.github.io">[中文解读]</a>
                                     <br>
                                 </td>
                             </tr>
@@ -1068,10 +1062,7 @@
                                     <em>IEEE International Conference on Multimedia and Expo (ICME)</em>, 2024 (Accept)
                                     <br>
                                     <!-- <a href="">[项目主页]</a> -->
-                                    <a href="https://learn-in-practice.github.io/">[Github]</a>
-                                    <a href="https://learn-in-practice.github.io/">[arxiv]</a>
-                                    <a href="https://learn-in-practice.github.io/">[bibtex]</a>
-                                    <a href="https://learn-in-practice.github.io/">[中文解读]</a>
+                                    <a href="https://ieeexplore.ieee.org/abstract/document/10688326">[Paper]</a>
                                     <br>
                                 </td>
                             </tr>
@@ -1083,8 +1074,7 @@
                                     <img style="width:100%;max-width:100%" src="./files/finediving.png" alt="dise">
                                 </td>
                                 <td width="75%" valign="center">
-                                    <papertitle>FineDiving: A Fine-grained Dataset for Procedure-aware Action Quality
-                                        Assessment</papertitle>
+                                    <papertitle>FineDiving: A Fine-grained Dataset for Procedure-aware Action Quality Assessment</papertitle>
                                     <br>
                                     <strong>Jinglin Xu</strong>#, Yongming Rao#, Xumin Yu, Guangyi Chen, Jie Zhou, Jiwen Lu*
                                     <br>
@@ -1094,8 +1084,8 @@
 
                                     <br>
                                     <a href="https://finediving.ivg-research.xyz/">[项目主页]</a>
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Xu_FineDiving_A_Fine-Grained_Dataset_for_Procedure-Aware_Action_Quality_Assessment_CVPR_2022_paper.pdf">[Paper]</a>
                                     <a href="https://github.com/xujinglin/FineDiving">[Github]</a>
-                                    <a href="https://arxiv.org/pdf/2204.03646.pdf">[arxiv]</a>
                                     <a href="./data/finediving.txt">[bibtex]</a>
                                     <a href="https://zhuanlan.zhihu.com/p/495367542">[中文解读]</a>
                                     <br>
