--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
                                     Ruoyan Pi, <strong>Jinglin Xu</strong>, Yuxin Peng*
                                     <!-- Ruoyan Pi, <strong>Jinglin Xu</strong>, et al. -->
                                     <br>
-                                    <em>IEEE International Conference on Multimedia and Expo (ICME)</em>, 2024 (Accept)
+                                    <em>IEEE International Conference on Multimedia and Expo (ICME)</em>, 2024
                                     <br>
                                     <!-- <a href="">[项目主页]</a> -->
                                     <a href="https://ieeexplore.ieee.org/abstract/document/10688326">[Paper]</a>
