--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
                                     <br>
                                     <!-- <a href="">[项目主页]</a> -->
                                     <a href="https://ieeexplore.ieee.org/abstract/document/10688326">[Paper]</a>
-                                    <a href="data/icme.txt">[bibtex]</a>
+                                    <a href="./data/icme.txt">[bibtex]</a>
                                     <br>
                                 </td>
                             </tr>
