--- a/index.html
+++ b/index.html
@@ -540,25 +540,13 @@
                                     <p style="text-align:center; font-weight:bold; font-size:25px;">
                                         <name>徐婧林</name>
                                     </p>
-                                    <!--徐婧林，北京科技大学智能科学与技术学院副教授。2020年博士毕业于西北工业大学，师从<a href="https://scholar.google.com/citations?user=xrqsoesAAAAJ&hl=en">韩军伟</a>教授。2020至2022年在清华大学<a href="https://www.au.tsinghua.edu.cn/info/1110/1583.htm">周杰</a>、<a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">鲁继文</a>教授团队任博士后研究员。2017年12月至2019年1月在美国罗彻斯特大学计算机科学系联合培养一年（国家留学基金委资助）。-->
-                                    <!-- <p class="align-justify">北京科技大学智能科学与技术学院副教授，西北工业大学博士（2015-2020）、清华大学博士后（2020-2022），美国罗彻斯特大学联合培养博士生（国家留学基金委资助）。<b>入选第九届中国科协青年人才托举工程（2023），获2022年中国图象图形学学会优秀博士学位论文奖（每年仅10名获奖者）、2023年中国自动化学会自然科学奖一等奖</b>。主要研究方向为视频动作理解、多模态细粒度分析与生成、三维人体姿态估计。已发表/接收17篇CCF A类国际期刊和会议论文（一作14篇，通讯1篇），代表性一作论文包括：CVPR论文5篇（1篇Oral、录取率4.2%，1篇Spotlight、录取率9.7%）、IEEE TIP论文3篇、IEEE TKDE论文1篇、AAAI和IJCAI论文5篇。<b>主持了国家自然科学基金面上项目、青年基金、中国博士后科学基金面上项目</b>，参与国家自然科学基金重点、面上、企业横向等多个项目。<b>获得2023年北京图象图形学学会“最美女科技工作者”称号、2022年西北工业大学优秀博士学位论文、2020年西北工业大学优秀毕业生</b>（2020届全校毕业研究生总人数的6%）、博士研究生国家奖学金（2017、2018年）、西北工业大学优秀研究生（2016、2017、2018年）等荣誉。<b>担任《电子与信息学报》编委、《计算机科学》青年编委、《人工智能》编委</b>、CCF多媒体技术专委会委员、CSIG多媒体专委会委员、CSIG视觉大数据专委会委员、CAA模式识别与机器智能专委会委员、CSIG女工委委员、BSIG女工委委员、IJCAI和AAAI程序委员会委员，领域顶级期刊（IEEE TPAMI、TIP等）和顶级会议（CVPR、ICCV等）审稿人。
-                                    </p> -->
                                     <p class="align-justify">
                                         北京科技大学智能科学与技术学院副教授，国家自然科学基金青年科学基金B类（原优青）获得者，北京图象图形学学会理事、副秘书长，中国图象图形学学会青托俱乐部副主席。主要研究方向为计算机视觉、视频理解、细粒度运动分析，已发表TPAMI、IJCV、CVPR等ACM/IEEE Trans.和CCF A类论文30余篇。主持国家自然科学基金面上、青年基金、北京市自然科学基金面上、中国博士后科学基金面上等项目；主持腾讯犀牛鸟专项研究计划；作为合作单位负责人参与国家自然科学基金重点（序2）、北京市自然科学基金联合基金重点（序2）等项目，已与中国电信、腾讯等单位合作，推进科研成果的落地应用。入选中国科协青年人才托举工程，获中国图象图形学学会石青云女科学家奖、优秀博士学位论文奖，获中国自动化学会自然科学奖一等奖（4/5）、中国图象图形学学会自然科学奖二等奖（3/5）等荣誉。担任《Chinese Journal of Electronics》（电子学报英文刊）青年编委、《电子与信息学报》编委、IJCAI/AAAI程序委员会委员等。
                                     </p>
                                     <p style="text-align:center;">
                                         <font color="red"><strong> 常年招收博士后、博士、硕士和科研实习生！（联系方式：<a class="wiki" href="mailto:xujinglin@ustb.edu.cn" style="color: red;">xujinglin@ustb.edu.cn</a>）</strong></font>
                                     </p>
-<!-- 
-                                    <li><a href="postdoc.html">
-                                            <font color="#005faa" size="3x"><b>招聘博士后</b> </font>
-                                        </a><br></li>
-                                    <li><a href="students.html">
-                                            <font color="#005faa" size="3px"><b>招收保研本科生和实习生</b></font>
-                                        </a></li>
-                                    <li><a href="external.html">
-                                            <font color="#005faa" size="3x"><b>招聘外校访问学生</b> </font>
-                                        </a><br></li> -->
+
                                     <p style="text-align:center">
                                         <!-- <a href="mailto:xujinglin@ustb.edu.cn"> 邮件 </a> &nbsp/&nbsp -->
                                         <a href="https://scholar.google.com/citations?hl=en&amp;tzom=-480&amp;user=SVFP5XEAAAAJ">
@@ -581,7 +569,9 @@
                                     <heading style="text-align:center; font-weight:bold; font-size:20px;">News</heading>
                                     <p>
                                         </p>
-
+                      <li style="margin: 5px;">
+                                            2025-10-09：1篇论文被CJE 2025接收
+                                        </li>
 							           <li style="margin: 5px;">
                                             2025-07-10：1篇论文被IEEE TCSVT 2025接收
                                         </li>
@@ -635,16 +625,6 @@
                                         <li style="margin: 5px;">
                                             国家自然科学基金青年基金，2021，项目负责人
                                         </li>
-<!--                                         <li style="margin: 5px;">
-                                            中国博士后科学基金面上项目，2020，项目负责人
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            西北工业大学博士论文创新基金，2018，项目负责人 -->
-                                        <!--</li>
-                                                                                                                        <li style="margin: 5px;">
-                                            国家自然科学基金面上项目，2019，参与 </li>
-                                                                                                                        <li style="margin: 5px;">
-                                            国家自然科学基金面上项目，2017，参与 </li>-->
                                     <p></p>
                                 </li></td>
                             </tr>
@@ -674,21 +654,6 @@
                                         <li style="margin: 5px;">
                                             中国图象图形学学会自然科学奖二等奖，2024，排第三
                                         </li>
-<!--                                         <li style="margin: 5px;">
-                                            北京图象图形学学会“最美女科技工作者”，2023
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            西北工业大学优秀博士学位论文，2022
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            西北工业大学优秀毕业生, 2020
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            博士研究生国家奖学金，2017、2018
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            西北工业大学优秀研究生，2016、2017、2018
-                                        </li> -->
                                     <p></p>
                                 </td>
                             </tr>
@@ -743,6 +708,22 @@
                                     <br>
                                 </td>
                             </tr>
+
+                      <tr>
+                                    <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                        <img style="width:100%;max-width:100%" src='./files/PoseTrack.png' alt="dise">
+                                    </td>
+                                    <td width="75%" valign="center">
+                                        <papertitle>PoseTrack: Enhancing Multi-Object Tracking with 3D Pose-Visual Fusion and Adaptive Trajectory Management</papertitle>
+                                        <br>
+                                        <strong>Jinglin Xu</strong>, Xudong Zhang, Ziyi Liu, Hongmin Liu*
+                                        <br>
+                                        <em>Chinese Journal of Electronics (<strong>CJE</strong>)</em>, 2025. (Accepted)
+                                        <br>
+                                        <br>
+                                    </td>
+                                </tr>
+
 
 							<tr>
 										  <td style="padding:20px;width:30%;max-width:30%" align="center">
