--- a/index.html
+++ b/index.html
@@ -570,6 +570,9 @@
                                     <p>
                                         </p>
                       <li style="margin: 5px;">
+                                            2025-11-08：2篇论文被AAAI 2026接收
+                                        </li>
+                      <li style="margin: 5px;">
                                             2025-10-09：1篇论文被CJE 2025接收
                                         </li>
 							           <li style="margin: 5px;">
@@ -588,9 +591,6 @@
 			
 									    <li style="margin: 5px;">
                                             2025-01-25：1篇论文被TPAMI 2025接收
-                                        </li>
-                                        <li style="margin: 5px;">
-                                            2025-01-23：2篇论文被ICLR 2025接收
                                         </li>
                                     <p></p>
                                 </td>
@@ -734,7 +734,7 @@
 											  <br>
 											  Canhui Tang, Zifan Han, Hongbo Sun, Sanping Zhou, Xuchong Zhang, Xin Wei, Ye Yuan, <strong>Jinglin Xu</strong>, Hao Sun
 											  <br>
-											  <em>arXiv preprint arXiv:2508.04369</em>
+											  <em>The Fortieth AAAI Conference on Artificial Intelligence (AAAI), 2026. (Accepted)</em>
 											  <br>
 											  <a href="https://arxiv.org/pdf/2508.04369?">[Paper]</a>
                         <a href="https://github.com/Hui-design/TSPO">[Github]</a>
@@ -742,22 +742,39 @@
 										  </td>
 									  </tr>
 
-                            <tr>
-                            <td style="padding:20px;width:30%;max-width:30%" align="center">
-                                <img style="width:100%;max-width:100%" src='./files/DyFo.png' alt="dise">
-                            </td>
-                            <td width="75%" valign="center">
-                                <papertitle>DyFo: A Training-Free Dynamic Focus Visual Search for Enhancing LMMs in Fine-Grained Visual Understanding</papertitle>
-                                <br>
-                                Geng Li, <strong>Jinglin Xu</strong>, Yunzhen Zhao, Yuxin Peng*
-                                <br>
-                                <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2025
-                                <br>
-                                <a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Li_DyFo_A_Training-Free_Dynamic_Focus_Visual_Search_for_Enhancing_LMMs_CVPR_2025_paper.pdf">[Paper]</a>
-                                <a href="https://github.com/PKU-ICST-MIPL/DyFo_CVPR2025">[Github]</a>
-                                <br>
-                            </td>
-                        </tr>
+              <tr>
+										  <td style="padding:20px;width:30%;max-width:30%" align="center">
+											  <img style="width:100%;max-width:100%" src='./files/MCMoE.png' alt="dise">
+										  </td>
+										  <td width="75%" valign="center">
+											  <papertitle>MCMoE: Completing Missing Modalities with Mixture of Experts for Incomplete Multimodal Action Quality Assessment</papertitle>
+											  <br>
+											  Huangbiao Xu, Huanqi Wu, Xiao Ke, Junyi Wu, Rui Xu, <strong>Jinglin Xu</strong>
+											  <br>
+											  <em>The Fortieth AAAI Conference on Artificial Intelligence (AAAI), 2026. (Accepted)</em>
+											  <br>
+											  <!-- <a href="https://arxiv.org/pdf/2508.04369?">[Paper]</a> -->
+                        <!-- <a href="https://github.com/Hui-design/TSPO">[Github]</a> -->
+											  <br>
+										  </td>
+									  </tr>
+
+                          <tr>
+                          <td style="padding:20px;width:30%;max-width:30%" align="center">
+                              <img style="width:100%;max-width:100%" src='./files/DyFo.png' alt="dise">
+                          </td>
+                          <td width="75%" valign="center">
+                              <papertitle>DyFo: A Training-Free Dynamic Focus Visual Search for Enhancing LMMs in Fine-Grained Visual Understanding</papertitle>
+                              <br>
+                              Geng Li, <strong>Jinglin Xu</strong>, Yunzhen Zhao, Yuxin Peng*
+                              <br>
+                              <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2025
+                              <br>
+                              <a href="https://openaccess.thecvf.com/content/CVPR2025/papers/Li_DyFo_A_Training-Free_Dynamic_Focus_Visual_Search_for_Enhancing_LMMs_CVPR_2025_paper.pdf">[Paper]</a>
+                              <a href="https://github.com/PKU-ICST-MIPL/DyFo_CVPR2025">[Github]</a>
+                              <br>
+                          </td>
+                      </tr>
 
 
 
