--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                                     <br>
                                     <strong>Jinglin Xu</strong>, Yongming Rao, Jie Zhou, Jiwen Lu*
                                     <br>
-                                    <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2025</em>
+                                    <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2025</em>
                                     <br>
                                     <a href="https://ieeexplore.ieee.org/document/10872809">[Paper]</a>
                                     <a href="https://github.com/xujinglin/TransferableUAL">[Github]</a>                                   
