--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <meta name="author" content="徐婧林">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="./files/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="icon" type="image/png" href="./files/USTB_logo.png">
 
 
@@ -541,7 +541,7 @@
                                         <name>徐婧林</name>
                                     </p>
                                     <p class="align-justify">
-                                        北京科技大学智能科学与技术学院副教授，国家自然科学基金青年科学基金B类（原优青）获得者，北京图象图形学学会理事、副秘书长，中国图象图形学学会青托俱乐部副主席。主要研究方向为计算机视觉、视频理解、细粒度运动分析，已发表TPAMI、IJCV、CVPR等ACM/IEEE Trans.和CCF A类论文30余篇。主持国家自然科学基金面上、青年基金、北京市自然科学基金面上、中国博士后科学基金面上等项目；主持腾讯犀牛鸟专项研究计划；作为合作单位负责人参与国家自然科学基金重点（序2）、北京市自然科学基金联合基金重点（序2）等项目，已与中国电信、腾讯等单位合作，推进科研成果的落地应用。入选中国科协青年人才托举工程，获中国图象图形学学会石青云女科学家奖、优秀博士学位论文奖，获中国自动化学会自然科学奖一等奖（4/5）、中国图象图形学学会自然科学奖二等奖（3/5）等荣誉。担任《Chinese Journal of Electronics》（电子学报英文刊）青年编委、《电子与信息学报》编委、IJCAI/AAAI程序委员会委员等。
+                                        北京科技大学智能科学与技术学院特聘教授，国家自然科学基金青年科学基金B类（原优青）获得者，北京图象图形学学会理事、副秘书长，中国图象图形学学会青托俱乐部副主席。主要研究方向为计算机视觉、视频理解、细粒度运动分析，已发表TPAMI、IJCV、CVPR等ACM/IEEE Trans.和CCF A类论文30余篇。主持国家自然科学基金面上、青年基金、北京市自然科学基金面上、中国博士后科学基金面上等项目；主持腾讯犀牛鸟专项研究计划；作为合作单位负责人参与国家自然科学基金重点（序2）、北京市自然科学基金联合基金重点（序2）等项目，已与中国电信、腾讯等单位合作，推进科研成果的落地应用。入选中国科协青年人才托举工程，获中国图象图形学学会石青云女科学家奖、优秀博士学位论文奖，获中国自动化学会自然科学奖一等奖（4/5）、中国图象图形学学会自然科学奖二等奖（3/5）等荣誉。担任《Chinese Journal of Electronics》（电子学报英文刊）青年编委、《电子与信息学报》编委、IJCAI/AAAI程序委员会委员等。
                                     </p>
                                     <p style="text-align:center;">
                                         <font color="red"><strong> 常年招收博士后、博士、硕士和科研实习生！（联系方式：<a class="wiki" href="mailto:xujinglin@ustb.edu.cn" style="color: red;">xujinglin@ustb.edu.cn</a>）</strong></font>
