--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                                     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>), 2025</em>
                                     <br>
                                     <a href="https://ieeexplore.ieee.org/document/10872809">[Paper]</a>
-                                    <a href="https://github.com/xujinglin/TransferableUAL">[Github]</a>                                   
+                                    <!-- <a href="https://github.com/xujinglin/TransferableUAL">[Github]</a>                                    -->
                                     <br>
                                 </td>
                             </tr>
