--- a/index.html
+++ b/index.html
@@ -718,8 +718,9 @@
                                         <br>
                                         <strong>Jinglin Xu</strong>, Xudong Zhang, Ziyi Liu, Hongmin Liu*
                                         <br>
-                                        <em>Chinese Journal of Electronics (<strong>CJE</strong>)</em>, 2025. (Accepted)
+                                        <em>Chinese Journal of Electronics (<strong>CJE</strong>)</em>, 2025.
                                         <br>
+										<a href="https://cje.ejournal.org.cn/article/pdf/preview/10.23919/cje.2025.00.250.pdf">[Paper]</a>
                                         <br>
                                     </td>
                                 </tr>
